Added a line in jupyter notebook

--- a/010_MODESOLVER_Student.ipynb
+++ b/010_MODESOLVER_Student.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,9 @@
     "\n",
     "nm = 1e-3\n",
     "wavelength = np.linspace(1500, 1600,11) * nm\n",
-    "f = td.C_0 / wavelength"
+    "f = td.C_0 / wavelength\n",
+    "\n",
+    "#set a change"
    ]
   },
   {
